r38 - may, 10, 2009
	* Cotisation : _form.php > 'delete' link has been translated to French
	* Cotisation : indexSuccess.php > link to 'delete' action is now displayed 
	* Compte : indexSuccess.php > link to 'delete' action is now displayed
	* Compte.php : delete() method has been overidden
	* Compte : actions > 'mis_a_jour_par' field gets the correct default value
	* Compte : _form.php : correct style of 'delete' link is applied
	* Statut : _form.php : correct style of 'delete' link is applied (and link
	  has been translated to French)
	* /web/images/tooltip_icon.gif : cropped to solve a very little align issue
	* DepenseForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up
	* RecetteForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up
	* MembreForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up
	* CotisationForm.class.php : image of calendar is displayed even if no
	  virtual host has been set up


r37 - may, 10, 2009
	* README : PHP 'memory_limit' parameter is specified as requirement
	* /doc/THANKS : new file with list of contributors
	* Membre : fixed bug in toString() method due to accents in string given to
	  mb_convert_case() function > encoding has been explicitely defined as UTF8
	* CotisationForm.class.php : French date format
	* DepenseForm.class.php : French date format
	* RecetteForm.class.php : French date format
	* MembreForm.class.php : French date format 
	* /web/js/jquery-ui/js/jquery-ui-1.7.1-custom.min.js : dates have been
	  translated to French
	

r36 - may, 8, 2009
	* MembreForm.class.php : Critical bug has been fixed (issue of foreign key
	  constraint with 'mis_a_jour_par' field
	

r35 - may, 7, 2009
	* /apps/front/config/view.yml : fixed mistake about mispelling of js file
	  'effect.js'
	* MembreForm.class.php : fixed bug with field 'mis_a_jour_par' when 
	  registering the first member of the association